--- a/paginas/reservas.html
+++ b/paginas/reservas.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
-    <link rel="stylesheet" href="../style.css/estilo.css">
+    <link rel="stylesheet" href="../style.css/estilos.css">
     <title>Reservas</title>
 </head>
 <body>
@@ -47,6 +47,7 @@
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sunt minima numquam eius, velit, omnis odit laudantium quibusdam ab porro nemo facilis suscipit quas culpa, laboriosam fugiat reprehenderit deleniti voluptas recusandae.
         </p>
 
+    
         <nav>
              <a class="button" href="https://www.wokiapp.com/reservas/huacho-fuegos-san-telmo?slug=huacho-fuegos-san-telmo&quantity=4&showDay=2025-04-09T20%3A47%3A50.927Z&isTimeFlexible=false&isSectorFlexible=false&enterByLink=true&id=77c5cfd1-6354-4601-b696-fbf74fceaf4c" target="_blank" rel="noopener noreferrer">Reserva</a>
         </nav>
