--- a/index.html
+++ b/index.html
@@ -73,7 +73,11 @@
 
             <div class="us1-grid">
                 <p>
-                    Nuestra esencia. Somos hijos de la Patagonia, forjados en la inmensidad del campo, las montañas y la naturaleza. Trajimos nuestras raíces a San Telmo, un barrio cargado de historia y encanto, para ofrecerles una experiencia única. Con una cocina a la vista que celebra lo artesanal y un servicio cálido que los hará sentir en casa, los invitamos a disfrutar de la autenticidad de nuestros sabores.</p>
+                    En el corazón de la Patagonia, los sabores se cuentan con historias. Nuestra cocina rescata recetas ancestrales y productos típicos del sur argentino: cordero patagónico, trucha de los lagos cristalinos, hongos de los bosques nativos y frutos rojos de la estepa.
+
+                    Cada plato es una invitación a descubrir la esencia salvaje y noble de estas tierras. Cocinamos con fuego lento, ingredientes frescos y el alma puesta en cada detalle.
+
+</p>
             </div>
     
             <div class="img1-grid">
@@ -82,7 +86,9 @@
 
             <div class="us2-grid">
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis distinctio, fuga voluptates cupiditate consectetur similique labore reiciendis illo delectus nemo numquam doloremque laudantium consequuntur ut quae architecto perferendis laborum accusantium!</p>
+                    En nuestra cocina, el fuego no es solo una herramienta: es el alma de cada preparación. Cocinamos exclusivamente a leña, como lo hacían los antiguos pobladores de la región, respetando los tiempos, aromas y temperaturas que solo las brasas pueden ofrecer.
+                    El calor de la lenga, el humo suave del ñire y la textura inconfundible que aporta el fuego directo convierten cada plato en una experiencia única e irrepetible.
+                    Aquí, la naturaleza no solo se observa: también se saborea.</p>
             </div>
 
             <div class="img2-grid">
@@ -125,7 +131,10 @@
         <section class="carrusel">
                 <div>
                     <h1>Menú</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto exercitationem, aspernatur quia aut voluptas magnam pariatur delectus rem ad veritatis amet doloremque doloribus deserunt quae ipsum vero dolor earum itaque.</p>
+                    <p>
+                        Nuestro menú celebra los sabores del sur, cocinados a fuego lento y con productos frescos de la región. Cordero patagónico, trucha ahumada, vegetales de estación y dulces artesanales: cada plato es una invitación a saborear la Patagonia desde el corazón del fuego.
+
+                    </p>
                 </div>
 
         <div id="carouselExampleCaptions" class="carousel slide w-25">
@@ -220,7 +229,8 @@
 
             <h1>Reservas</h1>
             <p>
-               Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sunt minima numquam eius, velit, omnis odit laudantium quibusdam ab porro nemo facilis suscipit quas culpa, laboriosam fugiat reprehenderit deleniti voluptas recusandae. 
+               Hacé tu reserva y disfrutá de una cocina patagónica auténtica, elaborada exclusivamente a leña.
+               Atendemos con cupos limitados para ofrecerte una experiencia personalizada.
             </p>
 
             
