--- a/paginas/menu.html
+++ b/paginas/menu.html
@@ -70,7 +70,7 @@
      <section class="carrusel">
                 <div>
                     <h1>Menú</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto exercitationem, aspernatur quia aut voluptas magnam pariatur delectus rem ad veritatis amet doloremque doloribus deserunt quae ipsum vero dolor earum itaque.</p>
+                    <p>Nuestro menú celebra los sabores del sur, cocinados a fuego lento y con productos frescos de la región. Cordero patagónico, trucha ahumada, vegetales de estación y dulces artesanales: cada plato es una invitación a saborear la Patagonia desde el corazón del fuego.</p>
                 </div>
                 <div id="carouselExampleCaptions" class="carousel slide w-25">
                     <div class="carousel-indicators">
