--- a/paginas/reservas.html
+++ b/paginas/reservas.html
@@ -44,7 +44,8 @@
         <h1>Reservas</h1>
 
         <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sunt minima numquam eius, velit, omnis odit laudantium quibusdam ab porro nemo facilis suscipit quas culpa, laboriosam fugiat reprehenderit deleniti voluptas recusandae.
+            Hacé tu reserva y disfrutá de una cocina patagónica auténtica, elaborada exclusivamente a leña.
+            Atendemos con cupos limitados para ofrecerte una experiencia personalizada.
         </p>
 
     
