--- a/paginas/us.html
+++ b/paginas/us.html
@@ -47,7 +47,9 @@
             </div>
             <div class="us1-grid">
                 <p>
-                Nuestra esencia. Somos hijos de la Patagonia, forjados en la inmensidad del campo, las montañas y la naturaleza. Trajimos nuestras raíces a San Telmo, un barrio cargado de historia y encanto, para ofrecerles una experiencia única. Con una cocina a la vista que celebra lo artesanal y un servicio cálido que los hará sentir en casa, los invitamos a disfrutar de la autenticidad de nuestros sabores.</p>
+                En el corazón de la Patagonia, los sabores se cuentan con historias. Nuestra cocina rescata recetas ancestrales y productos típicos del sur argentino: cordero patagónico, trucha de los lagos cristalinos, hongos de los bosques nativos y frutos rojos de la estepa.
+
+                Cada plato es una invitación a descubrir la esencia salvaje y noble de estas tierras. Cocinamos con fuego lento, ingredientes frescos y el alma puesta en cada detalle.</p>
             </div>
 
     
@@ -56,7 +58,9 @@
             </div>
 
             <div class="us2-grid">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis distinctio, fuga voluptates cupiditate consectetur similique labore reiciendis illo delectus nemo numquam doloremque laudantium consequuntur ut quae architecto perferendis laborum accusantium!</p>
+                <p>En nuestra cocina, el fuego no es solo una herramienta: es el alma de cada preparación. Cocinamos exclusivamente a leña, como lo hacían los antiguos pobladores de la región, respetando los tiempos, aromas y temperaturas que solo las brasas pueden ofrecer.
+                El calor de la lenga, el humo suave del ñire y la textura inconfundible que aporta el fuego directo convierten cada plato en una experiencia única e irrepetible.
+                Aquí, la naturaleza no solo se observa: también se saborea.</p>
             </div>
 
             <div class="img2-grid">
