--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Cocina patagónica en plena Buenos Aires: cordero al asador, trucha fresca y sabores del sur en un ambiente cálido y auténtico. Viví la experiencia del sur, sin salir de la ciudad.">
+    <meta name="keywords" content="restaurante, san telmo, patagonia, parrilla, asado, comida, calido">
      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
     <link rel="stylesheet" href="../style.css/estilos.css">
     <title>Contacto</title>
