--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -7,24 +7,13 @@
     <meta name="keywords" content="restaurante, san telmo, patagonia, parrilla, asado, comida, calido">
      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
     <link rel="stylesheet" href="../style.css/estilos.css">
-    <title>Contacto</title>
+    <title>Contacto - Huacho</title>
 </head>
 <body>
     <header>
-        <!-- <h1>Huacho</h1>
-        <img src="../imagenes/logoo.jpg.png" alt="">
-        <nav>
-            <ul>
-                <li><a href="../index.html">Home</a></li>
-                <li><a href="./us.html">Nosotros</a></li>
-                <li><a href="./menu.html">Menú</a></li>
-                <li><a href="#">Contactos</a></li>
-                <li><a href="./reservas.html">Reservas</a></li>
-            </ul>
-        </nav> -->
         <nav class="navbar navbar-expand-lg tamaño">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#"><img src="../imagenes/logoo.jpg.png" alt=""></a>
+                <a class="navbar-brand" href="#"><img src="../imagenes/logoo.jpg.png" alt="logo de oveja blanca sobre fondo negro "></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -40,6 +29,8 @@
             </div>
         </nav>
     </header>
+
+    <main>
 
     <section class="form">
 
@@ -77,6 +68,8 @@
 
         </form>
     </section>
+
+    </main>
     <footer>
 
          <div>
@@ -86,15 +79,15 @@
          <article>
 
          <div>
-             <img src="../imagenes/facebookn.jpg" alt="">
+             <img src="../imagenes/facebookn.jpg" alt="imagen de logo de facebook en color azul ">
         </div>
 
         <div>
-            <img src="../imagenes/instagramnn.webp" alt="">
+            <img src="../imagenes/instagramnn.webp" alt="imagen de logo de instagram en color rosa ">
         </div>
 
         <div>
-            <img src="../imagenes/whatsapp.png" alt="">
+            <img src="../imagenes/whatsapp.png" alt="logo de whatsapp en color verde con blanco ">
         </div>
 
         </article>
